opam-version: "2.0"
maintainer: "Nikhil Chatterjee <nikhilc1527@gmail.com>"
authors: "Nikhil Chatterjee"
homepage: "https://github.com/nikhilc1527/HashTrieMap-Proof"
bug-reports: "https://github.com/nikhilc1527/HashTrieMap-Proof/issues"
dev-repo: "git+https://github.com/nikhilc1527/HashTrieMap-Proof.git"
version: "dev"
synopsis: "Proofs for Go HashTrieMap"

depends: [
  "perennial"
]

pin-depends: [
  ["perennial.dev"             "git+https://github.com/mit-pdos/perennial#5e9e62274834c319936e9a20e9a19d5dee62d4a2"]

  ## begin indirect
  ["coq-coqutil.dev"           "git+https://github.com/mit-plv/coqutil#fa7e2099cd1de9d5fe41c6b3255f8d95e9a9a7de"]
  ["coq-record-update.dev"     "git+https://github.com/tchajed/coq-record-update#7b2645210331c3ec4ed75fa5ad0840a723f25151"]
  ["iris-named-props.dev"      "git+https://github.com/tchajed/iris-named-props#c388714a93b1c043ed42a3f446280abd5113d26f"]
  ["rocq-iris.dev"             "git+https://gitlab.mpi-sws.org/iris/iris#d8f049ee6e28201a8781622ab4390a62c5293a85"]
  ["rocq-stdpp.dev"            "git+https://gitlab.mpi-sws.org/iris/stdpp#a09c2a19de6898fd470983ca2363ade519d70fe1"]
  ## end
]

build: [make "-j%{jobs}%"]
install: ["go" "tool" "perennial-cli" "install"]
build-env: [
  [GOCACHE = "%{build}%/_build/.gocache"]
]
